<resources>
    <string name="app_name">UpReal</string>
    <string name="action_settings">Settings</string>
    <string name="renseignement">Renseignement</string>
    <string name="connexion">Connexion Via</string>
    <string name="connect_account_email">Connectez-vous ici</string>
    <string name="social_network">Réseaux Sociaux</string>
    <string name="scan">Scan</string>
    <string name="history_product">Produit Consultés</string>
    <string name="list">Mes listes</string>
    <string name="news">Actualités</string>
    <string name="catalog">Catalogue</string>
    <string name="shop">Magasins</string>
    <string name="settings">Paramètres</string>
    <string name="loyalty_cards">Cartes de fidélité et Bons</string>
    <string name="loyalty">Fidélité</string>
    <string name="parrainage">Mes filleuls</string>
    <string name="acheivement">Succès</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="profile">Profil</string>
    <string name="price">Prix</string>
    <string name="search">Rechercher</string>
    <string name="rate">Note et Avis</string>
    <string name="last_reduc">Dernières réductions</string>
    <string name="mailorid">Via Email ou identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se Connecter</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">693250270809405</string>
    <string name="google">google</string>
    <string name="twitter">twitter</string>
    <string name="confirm_password">Confirmation du mot de passe</string>
    <string name="adresse_email">Adresse e-mail</string>
    <string name="cgu">J\'accepte les C.G.U</string>
    <string name="register">S\'inscrire</string>
    <string name="select_connexion">Connexion</string>
    <string name="select_register">Inscription</string>
    <string name="btn_logout_from_google">Deconnexion de Google</string>
    <string name="btn_revoke_access">Revoquer l\'access</string>
    <string name="commentary">Commentaire</string>
    <string name="social">Social</string>
    <string name="options">Options</string>
    <string name="add_product_in_which_list">Dans quelle liste voulez vous l\'ajouter ?</string>
    <string name="create_custom_list">Créer une liste personnalisée?</string>
    <string name="product">Produit</string>
    <string name="user">Utilisateur</string>
    <string name="brand">Marque</string>
    <string name="store">Magasins</string>
    <string name="action_camera">Camera</string>
    <string name="name_product">Nom du produit</string>
    <string name="description">Description</string>
    <string name="barcode">Code barre</string>
    <string name="noticed_price">Prix constaté</string>
    <string name="at_the_shop">Dans le magasin</string>
    <string name="submit">Soumettre</string>
    <string name="cancel">Annuler</string>
    <string name="add_product">Ajouter ce produit ?</string>
    <string name="liked_product">Produit aimés</string>
    <string name="followed_user">Utilisateurs suivis</string>
    <string name="product_seen_history">Historique des produits consultés</string>
    <string name="my_commentary">Mes commentaires</string>
    <string name="my_barter_product_list">Ma liste de produit à troquer</string>
    <string name="customized_list">Mes listes personnalisées</string>
    <string name="add_name_list">Veuillez ajouter un nom de liste</string>
    <string name="add_list">Ajout d\'une nouvelle liste</string>
    <string name="list_name_empty">Problème lors de la création de la liste</string>
    <string name="name_list_correct">Veuillez rentrer un nom de liste correct</string>
    <string name="about_menu">About</string>
    <string name="about_message">Barcode Scanner</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="benchmark_help">Place images in /sdcard/zxingbenchmark, then check \"adb logcat\" for results. Turn on Airplane Mode first for more reliable results.</string>
    <string name="benchmark_run">Run benchmark</string>
    <string name="benchmark_running">Benchmark running\u2026</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="encode_bad_data">Encode bad data</string>
    <string name="encode_contact">Encode contact</string>
    <string name="encode_email">Encode email</string>
    <string name="encode_hidden_data">Encode hidden data</string>
    <string name="encode_location">Encode location</string>
    <string name="encode_phone">Encode phone</string>
    <string name="encode_sms">Encode SMS</string>
    <string name="encode_url">Encode URL</string>
    <string name="get_camera_parameters">Get camera parameters</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="picture">Picture</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="address">Votre adresse</string>
    <string name="update">Modifier</string>
    <string name="city">Votre ville</string>
    <string name="postal_code">Votre code postal</string>
    <string name="current">Actuel</string>
    <string name="new_p">Nouveau</string>
    <string name="confirm">Confirmez</string>
    <string name="product_image">Image du produit</string>
    <string name="category">Catégorie</string>
    <string name="nutrition_facts">Information nutritionnelle</string>
    <string name="value">Valeur</string>
    <string name="for_g">Pour 100g</string>
    <string name="per_portion">Par portion</string>
    <string name="percent_rdi">%AJR</string>
    <string name="store_or_company">Magasin ou compagnie</string>
    <string name="store_not_found">Vous ne trouvez pas le magasin ?</string>
    <string name="stores_name">Nom du magasin</string>
</resources>