<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_or_company"
        android:textColor="#000000"
        android:id="@+id/store_company" />

    <Spinner
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_not_found"
        android:textColor="#000000"
        android:buttonTint="#000000"
        android:id="@+id/checkBox" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/stores_name"
        android:visibility="gone"
        android:textColor="#000000"
        android:textColorHint="@color/common_plus_signin_btn_text_light_default"
        android:id="@+id/shop_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/barcode"
        android:textColor="#000000"
        android:textColorHint="@color/common_plus_signin_btn_text_light_default"
        android:ems="10"
        android:id="@+id/ean" />
</LinearLayout>