<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_food_nutrition"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/nutrition_facts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_large_material"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nutrition_facts">
            <TableRow>
                <TextView
                    android:background="@drawable/first_row_cell_shape"
                    android:text="@string/value"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"/>
                <TextView
                    android:background="@drawable/first_row_cell_shape"
                    android:text="@string/for_g"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"/>
                <TextView
                    android:background="@drawable/first_row_cell_shape"
                    android:text="@string/per_portion"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"/>
                <TextView
                    android:background="@drawable/first_row_cell_shape"
                    android:text="@string/percent_rdi"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
