<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/material_blue_grey_800"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/image_product"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingLeft="16dp"
            android:src="@drawable/ic_action_camera"
            android:gravity="center_horizontal|center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="@color/material_deep_teal_500"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/material_deep_teal_500"
            android:padding="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/name_product"
                android:padding="10dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/brand"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/barcode"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/noticed_price"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/at_the_shop"
                android:paddingLeft="10dp"
                android:paddingTop="25dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/material_deep_teal_500"
            android:layout_marginRight="5dp">

            <EditText
                android:id="@+id/product_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"/>

            <EditText
                android:id="@+id/brand"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"/>

            <EditText
                android:id="@+id/barcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"/>

            <EditText
                android:id="@+id/noticedprice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"/>

            <EditText
                android:id="@+id/attheshop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/primary_material_dark">

        <Button
            android:id="@+id/addprodcancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/addprodok"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/submit"/>
        </LinearLayout>
</LinearLayout>